import java.util.concurrent.TimeUnit

plugins {
    id 'dev.architectury.loom' version '1.13-SNAPSHOT' apply false
    id 'architectury-plugin' version '3.4-SNAPSHOT'
    id 'com.github.johnrengelman.shadow' version '8.1.1' apply false
}

architectury {
    minecraft = minecraft_version
}

allprojects {
    group = maven_group
    version = mod_version

    configurations.configureEach {
        resolutionStrategy.cacheChangingModulesFor(0, TimeUnit.SECONDS)
        resolutionStrategy.cacheDynamicVersionsFor(0, TimeUnit.SECONDS)
    }
}

subprojects {
    apply plugin: 'dev.architectury.loom'
    apply plugin: 'architectury-plugin'
    apply plugin: 'maven-publish'

    loom {
        runs.all {
            ideConfigGenerated = false
        }
    }

    base {
        archivesName = "$archives_name-$project.name"
    }

    repositories {
        mavenLocal()
        maven { url = rootProject.file("core/build/repo") }
        maven { url = "https://maven.createmod.net" }
        maven { url = "https://maven.ithundxr.dev/snapshots" }
        maven {
            name = 'GeckoLib'
            url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
            content {
                includeGroupByRegex("software\\.bernie.*")
                includeGroup("com.eliotlash.mclib")
            }
        }
        maven {
            url "https://maven2.bai.lol"
            content {
                includeGroup "lol.bai"
                includeGroup "mcp.mobius.waila"
            }
        }
    }

    dependencies {
        minecraft "net.minecraft:minecraft:$minecraft_version"
        mappings loom.officialMojangMappings()

        compileOnly "org.appliedenergistics:guideme:$guideme_version:api"
        runtimeOnly "org.appliedenergistics:guideme:$guideme_version"

        implementation("com.eliotlash.mclib:mclib:20")
    }

    java {
        withSourcesJar()

        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.release = 21
    }
}
